add keyboard shortcuts

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -21,32 +21,48 @@
         Use the toggle options below to modify the settings...
       </p>
 
-      <div class="option">
-        <span>Pause Extension</span>
+      <div class="options">
+        <div class="option">
+          <span>Pause Extension</span>
 
-        <div class="switch">
-          <input type="checkbox" class="uwv-option" id="master" data-key="master" />
-          <label class="handle" for="master"></label>
+          <div class="switch">
+            <input type="checkbox" class="uwv-option" id="master" data-key="master" />
+            <label class="handle" for="master"></label>
+          </div>
+        </div>
+
+        <div class="option">
+          <span>Upscale</span>
+
+          <div class="switch">
+            <input type="checkbox" class="uwv-option" id="upscale" data-key="upscale" />
+            <label class="handle" for="upscale"></label>
+          </div>
+        </div>
+
+        <div class="option">
+          <span>Stretch</span>
+
+          <div class="switch">
+            <input type="checkbox" class="uwv-option" id="stretch" data-key="stretch" />
+            <label class="handle" for="stretch"></label>
+          </div>
         </div>
       </div>
 
-      <div class="option">
-        <span>Upscale</span>
+      <p>
+        Predefined Shortcuts
+      </p>
 
-        <div class="switch">
-          <input type="checkbox" class="uwv-option" id="upscale" data-key="upscale" />
-          <label class="handle" for="upscale"></label>
-        </div>
-      </div>
+      <ul class="shortcuts">
+        <li>
+          <kbd>&#8984;</kbd> <kbd>&#8679;</kbd> <kbd>&uarr;</kbd> - Toggle Pause
+        </li>
 
-      <div class="option">
-        <span>Stretch</span>
-
-        <div class="switch">
-          <input type="checkbox" class="uwv-option" id="stretch" data-key="stretch" />
-          <label class="handle" for="stretch"></label>
-        </div>
-      </div>
+        <li>
+          <kbd>&#8984;</kbd> <kbd>&#8679;</kbd> <kbd>&darr;</kbd> - Toggle Modes
+        </li>
+      </ul>
     </div>
   </div>
 
