--- a/extension/popup.html
+++ b/extension/popup.html
@@ -56,11 +56,11 @@
 
       <ul class="shortcuts">
         <li>
-          <kbd>&#8984;</kbd> <kbd>&#8679;</kbd> <kbd>&uarr;</kbd> - Toggle Pause
+          <kbd class="os-detect">ctrl</kbd> <kbd>shift</kbd> <kbd>9</kbd> - Toggle Pause
         </li>
 
         <li>
-          <kbd>&#8984;</kbd> <kbd>&#8679;</kbd> <kbd>&darr;</kbd> - Toggle Modes
+          <kbd class="os-detect">ctrl</kbd> <kbd>shift</kbd> <kbd>0</kbd> - Toggle Modes
         </li>
       </ul>
     </div>
